--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <meta name="keywords" content="online casino payout, free play money, best real money casino, trusted online casinos, winning games, best online slots" />
     <title>Online Casino FAQs: Tips, Tricks, and Trusted Advice</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="canonical" href="https://prettygracia.github.io/casino-facts/">
+    <meta name="google-site-verification" content="vQmSYckz8pc7RaA1C71jtqMpoVBqF6KSmc3ANvqtJzc" />
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PJ8EX37X0G"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-PJ8EX37X0G');
+    </script>
 </head>
 <body>
     <header>
